@@ -5,7 +5,6 @@ package Test::Warnings;
 
 use parent 'Exporter';
 use Test::Builder;
-use Class::Method::Modifiers ();
 
 our @EXPORT_OK = qw(
     allow_warnings allowing_warnings
@@ -77,19 +76,23 @@ if (Test::Builder->can('done_testing'))
     # monkeypatch Test::Builder::done_testing:
     # check for any forbidden warnings, and record that we have done so
     # so we do not check again via END
-    Class::Method::Modifiers::install_modifier('Test::Builder',
-        before => done_testing => sub {
-            # only do this at the end of all tests, not at the end of a subtest
-            my $builder = _builder;
-            my $in_subtest_sub = $builder->can('in_subtest');
-            if (not ($in_subtest_sub ? $builder->$in_subtest_sub : $builder->parent))
-            {
-                local $Test::Builder::Level = $Test::Builder::Level + 3;
-                had_no_warnings('no (unexpected) warnings (via done_testing)');
-                $done_testing_called = 1;
-            }
-        },
-    );
+
+    no strict 'refs';
+    my $orig = *{'Test::Builder::done_testing'}{CODE};
+    no warnings 'redefine';
+    *{'Test::Builder::done_testing'} = sub {
+        # only do this at the end of all tests, not at the end of a subtest
+        my $builder = _builder;
+        my $in_subtest_sub = $builder->can('in_subtest');
+        if (not ($in_subtest_sub ? $builder->$in_subtest_sub : $builder->parent))
+        {
+            local $Test::Builder::Level = $Test::Builder::Level + 3;
+            had_no_warnings('no (unexpected) warnings (via done_testing)');
+            $done_testing_called = 1;
+        }
+
+        $orig->(@_);
+    };
 }
 
 END {
